--- a/web/index.html
+++ b/web/index.html
@@ -36,6 +36,7 @@
        https://developers.google.com/web/fundamentals/primers/service-workers -->
        <!-- The core Firebase JS SDK is always required and must be listed first -->
 <script src="https://www.gstatic.com/firebasejs/8.2.6/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-auth.js"></script>
 
 <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
@@ -65,5 +66,6 @@
     }
   </script>
   <script src="main.dart.js" type="application/javascript"></script>
+  
 </body>
 </html>
